--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 
-<h1>Hello World!</h1>
-<p>Name: Agung</p>
-<p>NIM: 13598004</p>
+<h1>Kami suka turbo</h1>
+<p>Name: Farrell</p>
+<p>NIM: 23521093</p>
 
 
 <iframe src="hello.txt" width="1000" height="1000" frameborder="0"></iframe>
